@@ -1,3 +1,7 @@
+2023-02-18  Robby Stephenson  <robby@periapsis.org>
+
+	* Added report with one entry per page (Bug 452552).
+
 2023-02-05  Robby Stephenson  <robby@periapsis.org>
 
 	* Added data source for iTunes music.
